<resources>
    <string name="app_name">Relaxify</string>
    <string name="time_to_sell">Glow begins with  relaxation</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms_and_condition">I agree To The <u> Terms  Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_enter_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_successful">Thanks for registering!.</string>

    <string name="please_wait">Please Wait&#8230;</string>
    <string name="error_details">Your details are valid.</string>
    <string name="login_successfull">You are logged in successfully.</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="title_forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="ntn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed</string>

    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="welcome_to_n_our_platform">Relaxify\nFeel Good\nLive Better</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_products">Product</string>
    <string name="title_orders">Orders</string>
    <string name="title_dashboard">Home</string>
    <string name="empty"></string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_edit">Edit</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_settings">Setting</string>
    <string name="registration_image">imageview\n</string>


</resources>