<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">
    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
           android:layout_margin="12dp">

            <!-- 🩷 Text on Left -->
            <com.raimzhanov.sweatapp.utils.MSPTextViewBold
                android:id="@+id/tv_welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="24dp"
                android:text="@string/welcome_to_n_our_platform"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <!-- 🖼️ Image on Right -->
            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/pi" />
        </LinearLayout>

    </FrameLayout>
    <com.raimzhanov.sweatapp.utils.MSPTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">
<com.raimzhanov.sweatapp.utils.MSPEditText
    android:id="@+id/et_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:padding="@dimen/et_padding"
    android:textColor="@color/colorPrimaryText"
    android:textSize="@dimen/et_textSize"
    tools:text="raimjanovnursultan@gmail.com"
    />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">
        <com.raimzhanov.sweatapp.utils.MSPEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="1234568"
            />
    </com.google.android.material.textfield.TextInputLayout>

<com.raimzhanov.sweatapp.utils.MSPTextView
    android:id="@+id/tv_forgot_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:foreground="?attr/selectableItemBackground"
    android:padding="@dimen/clickable_text_view_padding"
    android:text="@string/lbl_forgot_password"
    android:textColor="@color/colorSecondaryText"
    android:textSize="@dimen/forgot_password_textSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/til_password" />
    <com.raimzhanov.sweatapp.utils.MSPButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F25D9C"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textSize="@dimen/btn_textSize"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">
            <com.raimzhanov.sweatapp.utils.MSPTextView
                android:id="@+id/tv_don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="@dimen/clickable_text_view_padding"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/lbl_text_view_textSize" />
            <com.raimzhanov.sweatapp.utils.MSPTextViewBold
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/clickable_text_view_padding"
                android:text="@string/register"
                android:textColor="@color/colorSecondaryText"
                />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>